--- a/src/components/CategoryList/CategoryList.css
+++ b/src/components/CategoryList/CategoryList.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-wrap: wrap;
     list-style: none;
-    gap: 10px;
-    padding-right: 20px;
+    gap: 30px;
+    margin-right: 30px;
 }
 
 .categoryList li a {
