--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -1,8 +1,13 @@
 .navbar {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
-.cart {
-    margin: auto;
+.header {
+  display: flex;
+  justify-content: space-around;
+  border-bottom: 1px lightgray solid;
+  position: fixed;
+  top: 0px;
+  width: 100%;
 }
