--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer {
     display: flex;
     justify-content: center;
-    margin: 15%;
+    margin: 5% 15%;
     border-top: 1px solid lightgray;
 }
