--- a/src/components/Items/Item.css
+++ b/src/components/Items/Item.css
@@ -45,13 +45,13 @@
   color: white;
   font-weight: bold;
   font-size: large;
-  background-color: #85bb65;
+  background-color: #007bff;
   border: none;
   cursor: pointer;
 }
 
 .addButton:hover {
-  background-color: #9abb87;
+  background-color: #0056b3;
 }
 
 .itemListContainer {
