--- a/src/components/CartWidget/CartWidget.css
+++ b/src/components/CartWidget/CartWidget.css
@@ -3,7 +3,7 @@
 }
 
 .cart span {
-    background-color: orange;
+    background-color: #FFDB58;
     border-radius: 35%;
     font-weight: bold;
     padding: 0.2rem;
